--- a/style.css
+++ b/style.css
@@ -1,67 +1,68 @@
 @media (max-width: 599px) {
 }
 
-aside{
+aside {
 	width: 300px;
-border: 1px solid black;
-text-align: center;
-background-color: #2196F3;
-display: block;
-position: absolute; left: 0px; bottom: 3px;
-
+	border: 1px solid black;
+	text-align: center;
+	background-color: #2196f3;
+	display: block;
+	position: absolute;
+	left: 0px;
+	bottom: 3px;
 }
 
-.info{
+.info {
 	text-align: center;
 }
-h2{
+h2 {
 	text-align: center;
-	font-style: italic;	
+	font-style: italic;
 	border-bottom: 1px solid black;
 }
 
-
 .sec-gauche {
-	text-align: center; 
+	text-align: center;
 	margin-top: 50px;
 	margin-bottom: 90px;
 	overflow: auto;
-
 }
 
-h3{
+h3 {
 	font-size: 25px;
 	font-family: Trebuchet MS;
-  	 width:300px;
-    height:28px;				  
-    border:1px solid #000000;
-	background-color: 	#808080;
-	margin:0 0 30px 0;	
+	width: 300px;
+	height: 28px;
+	border: 1px solid #000000;
+	background-color: #808080;
+	margin: 0 0 30px 0;
 	color: white;
 }
-.titre{ 
+.titre {
 	padding-left: 200px;
-  flex: 0 0 200px;
-  height: 4px;
-  margin-top: .10em;
-  margin-right: 100px;
- }
+	flex: 0 0 200px;
+	height: 4px;
+	margin-top: 0.1em;
+	margin-right: 100px;
+}
 
-.sec-droite{
-	text-align: center; 
+.sec-droite {
+	text-align: center;
 	margin-top: 50px;
 	margin-bottom: 90px;
 	overflow: auto;
 }
-h1{
-	color: #0288D1;
+h1 {
+	color: #0288d1;
 }
 
+body {
+	margin: 0;
+	display: grid;
+	grid-template-columns: 250px 1fr;
+}
 
-
-
-
-
-
-
-
+aside {
+	position: static;
+	min-height: 100vh;
+}
